Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3748

qmf - Methods cannot be invoked when the agent is in external-storage mode

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.14
    • 0.15
    • QMF
    • None

    Description

      The qmf2 agent checks for the existence of the referenced object in the internal data store before allowing a method call to be handled. When external-storage mode is selected, the internal data store is empty and this check fails.

      The fix is to only perform this check when the storage is internal.

      Attachments

        Activity

          People

            tross Ted Ross
            tross Ted Ross
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: