QPID-3748 - Methods cannot be invoked when the agent is in external-storage mode

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1230050 13f79535-47bb-0310-9956-ffa450edef68